--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,8 @@
     <string name="dialog_draw_overlay">On Marshmallow and up, the Draw Over Other Apps permission must be granted to show the floating window</string>
     <string name="open_settings">Open Settings</string>
     <string name="open_settings_failed_clear_deafults">Open settings failed. Please manually clear the defaults for your current browser</string>
-    <string name="accessibility_disabled">Anticipate\'s accessibility service is disabled, which means it can\'t pre-load links on-screen. Please open the app to enable.</string>
+    <string name="accessibility_disabled">Anticipate\'s accessibility service is disabled. Please enable to pre-load links.</string>
     <string name="floating_window_checkbox">Floating window to monitor pre-loaded URLs</string>
+    <string name="anticipate_url_monitor">Anticipate URL Monitor</string>
+    <string name="notification_tap_to_close">Tap to close floating window</string>
 </resources>
