Added basic share functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,6 @@
     <string name="dynamic_toolbar_color">Dynamic toolbar color</string>
     <string name="default_toolbar_color">Default toolbar color</string>
 
+    <string name="share">Share</string>
+
 </resources>
