Fixes toolbar color DB bugs, add share button, fix general bugs: fix Switch on <5.0, use back arrow vector, add interpolators in animations, use LeakCanary, tweak layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,9 +59,9 @@
     <string name="default_toolbar_color">Default toolbar color</string>
 
     <string name="share">Share</string>
-    <string name="animation">Animation style</string>
-    <string name="slide_up">Slide up</string>
-    <string name="slide_left">Slide left</string>
-    <string name="off">Off</string>
+    <string name="animation">Animation: </string>
+    <string name="slide_bottom">Slide in from bottom</string>
+    <string name="slide_right">Slide in from right</string>
+    <string name="none">None</string>
 
 </resources>
