Add working bubble switcher, add lollipop open animation style

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
 
     <string name="share">Share</string>
     <string name="animation">Animation: </string>
+    <string name="slide_bottom_android">Lollipop+ slide in</string>
     <string name="slide_bottom">Slide in from bottom</string>
     <string name="slide_right">Slide in from right</string>
     <string name="none">None - system animation</string>
