Add app-based toolbar color

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,14 @@
     <string name="swipe_to_remove">Swipe to remove</string>
     <string name="accessibility_service_not_active">Anticipate\'s accessibility service has become inactive. Please manually turn the accessibility service off and on again.</string>
     <string name="use_chrome_custom_tabs">Use Chrome Custom Tabs</string>
+
+    <string name="dynamic_toolbar_color">Dynamic site-based toolbar color</string>
     <string name="toolbar_color_desc">Use the website-defined toolbar color (when defined). This will work the second time a website is opened.</string>
-    <string name="dynamic_toolbar_color">Dynamic toolbar color</string>
+
+    <string name="dynamic_app_toolbar_color">Dynamic app-based toolbar color</string>
+    <string name="app_toolbar_color_desc">Use the primary color from the originating app as the toolbar color.</string>
+
+
     <string name="default_toolbar_color">Default toolbar color</string>
 
     <string name="share">Share</string>
