--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,12 +55,12 @@
 
     <string name="accessibility_service_not_active">Anticipate\'s accessibility service has become inactive. Please manually turn the accessibility service off and on again.</string>
 
-    <string name="dynamic_appbased_toolbar_color">App-based toolbar color (BETA)</string>
-    <string name="appbased_toolbar_color_desc">Use the primary color from the originating app as the toolbar color.</string>
-    <string name="enable_service_appbased_toolbar">The accessibility service must be enabled to use app-based toolbar color.</string>
-
     <string name="dynamic_toolbar_color">Site-based toolbar color</string>
     <string name="toolbar_color_desc">Use the website-defined toolbar color (when defined). This will work the second time a website is opened.</string>
+
+    <string name="dynamic_page_toolbar_color">Page-based toolbar color (BETA)</string>
+    <string name="dynamic_page_toolbar_color_desc">Use the primary color from the originating page/app as the toolbar color</string>
+    <string name="enable_service_page_toolbar">The accessibility service must be enabled to use page-based toolbar color</string>
 
     <string name="default_toolbar_color">Default toolbar color</string>
 
