--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,8 @@
     <string name="anticipate_update">Anticipate updated to v</string>
     <string name="anticipate_update_desc">Touch to check out the new features</string>
 
+    <string name="open_in_quick_switch_bubble">Open in Quick-Switch Bubble (BETA)</string>
+    <string name="quick_switch_bubble_desc">Starts loading links in Custom Tabs and resumes your previous app, with bubbles to open the loaded websites</string>
+    <string name="enable_service_quick_switch">The accessibility service must be enabled to use quick-switch bubbles.</string>
+
 </resources>
