--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,24 +1,23 @@
+<?xml version="1.0"?>
 <resources>
     <string name="app_name">Anticipate</string>
     <string name="desc">To detect links on-screen and prepare for them, turn on Anticipate\'s accessibility service</string>
     <string name="enable_accessibility_service">Enable Accessibility Service</string>
-
     <string name="desc_default">To open all links using Anticipate, you may set it as the default browser</string>
     <string name="set_as_default_browser">Set as default browser</string>
     <string name="dialog_clear_defaults">Another browser is currently set as default. Clear its defaults first to set Anticipate as default.</string>
     <string name="try_it_out">Try it out</string>
     <string name="enter_a_url">Enter a URL</string>
-    <string name="dialog_draw_overlay">To show floating elements on Android 6.0+, grant the "Draw Over Other Apps" permission</string>
+    <string name="dialog_draw_overlay">To show floating elements on Android 6.0+, grant the \"Draw Over Other Apps\" permission</string>
     <string name="open_settings">Open Settings Page</string>
     <string name="open_settings_failed_clear_deafults">Open settings failed. Please manually clear the defaults for your current browser.</string>
-    <string name="open_settings_failed_overlay">Open settings failed. Please manually enable the "Draw over other apps" setting for Anticipate.</string>
+    <string name="open_settings_failed_overlay">Open settings failed. Please manually enable the \"Draw over other apps\" setting for Anticipate.</string>
     <string name="accessibility_disabled">Anticipate\'s accessibility service is disabled. Please enable to pre-load links.</string>
     <string name="floating_window_checkbox">Floating window to monitor warmed-up URLs</string>
     <string name="anticipate_url_monitor">Anticipate URL Monitor</string>
     <string name="notification_tap_to_close">Touch to close floating window</string>
     <string name="about_dialog_title">Anticipate v%s</string>
     <string name="dismiss">Dismiss</string>
-
     <string name="about_body"><![CDATA[
         <b>Anticipate</b> is a web browsing tool that detects and warms-up for links on-screen.
         <br/><br/>
@@ -36,7 +35,6 @@
         <a href=\'https://github.com/pluscubed/anticipate\'>GitHub</a> - source, issues, feature requests<br/>
         <a href=\'http://ost4cel.oneskyapp.com/collaboration/project/55161\'>OneSky</a> - help translate the app<br/><br/>
     ]]></string>
-
     <string name="about">About</string>
     <string name="per_app_filter_mode">Per-app filter:</string>
     <string name="configure">Configure</string>
@@ -48,51 +46,37 @@
     <string name="unable_to_launch">No Chrome Custom Tabs compatible browsers are installed</string>
     <string name="transition_fab_add" translatable="false">dialog_add</string>
     <string name="undo">Undo</string>
-
     <string name="app_removed">%s removed from the list</string>
-
     <string name="no_blacklisted_apps">No blacklisted apps</string>
     <string name="no_whitelisted_apps">No whitelisted apps</string>
     <string name="swipe_to_remove">Swipe to remove</string>
-
     <string name="accessibility_service_not_active">Anticipate\'s accessibility service has become inactive. Please manually turn the accessibility service off and on again.</string>
-
     <string name="dynamic_toolbar_color">Site-based toolbar color</string>
     <string name="toolbar_color_desc">Use the website-defined toolbar color (when defined). This will work the second time a website is opened.</string>
-
     <string name="dynamic_page_toolbar_color">Page-based toolbar color (BETA)</string>
     <string name="dynamic_page_toolbar_color_desc">Use the primary color from the originating page/app as the toolbar color</string>
     <string name="enable_service_page_toolbar">The accessibility service must be enabled to use page-based toolbar color</string>
-
     <string name="default_toolbar_color">Default toolbar color</string>
-
     <string name="share">Share</string>
-
-    <string name="animation">Animation: </string>
+    <string name="animation">Animation:</string>
     <string name="slide_bottom_android">Lollipop+ slide in</string>
     <string name="slide_bottom">Slide in from bottom</string>
     <string name="slide_right">Slide in from right</string>
     <string name="none">None - system animation</string>
-
     <string name="custom_tab_browser">Custom Tab Browser:</string>
     <string name="install_chrome">Install Chrome</string>
-
     <string name="error">Error</string>
     <string name="changelog">Changelog</string>
-
     <string name="custom">Custom</string>
     <string name="done">Done</string>
-
     <string name="using_anticipate">using Anticipate</string>
     <string name="using_browser">using browser</string>
-
     <string name="anticipate_update">Anticipate updated to v</string>
     <string name="anticipate_update_desc">Touch to check out the new features</string>
-
     <string name="open_in_quick_switch_bubble">Open in Quick-Switch Bubble (BETA)</string>
     <string name="quick_switch_bubble_desc">Starts loading links in Custom Tabs and resumes your previous app, with bubbles to open the loaded websites</string>
     <string name="enable_service_quick_switch">The accessibility service must be enabled to use quick-switch bubbles.</string>
     <string name="unable_to_launch_browser_error">Selected Custom Tabs browser reported an error</string>
     <string name="anticipate_settings">Anticipate Settings</string>
-
+    <string name="use_chrome_custom_tabs">Use Chrome Custom Tabs</string>
 </resources>
