--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,13 +74,13 @@
     <string name="using_browser">using browser</string>
     <string name="anticipate_update">Anticipate updated to v</string>
     <string name="anticipate_update_desc">Touch to check out the new features</string>
-    <string name="open_in_quick_switch_bubble">Open in Quick-Switch Bubble (BETA)</string>
+    <string name="open_in_quick_switch_bubble">Open in QuickSwitch Bubble (BETA)</string>
     <string name="quick_switch_bubble_desc">Starts loading links in Custom Tabs and resumes your previous app, with bubbles to open the loaded websites</string>
-    <string name="enable_service_quick_switch">The accessibility service must be enabled to use quick-switch bubbles.</string>
+    <string name="enable_service_quick_switch">The accessibility service must be enabled to use QuickSwitch Bubbles.</string>
     <string name="unable_to_launch_browser_error">Selected Custom Tabs browser reported an error</string>
     <string name="anticipate_settings">Anticipate Settings</string>
     <string name="use_chrome_custom_tabs">Use Chrome Custom Tabs</string>
-    <string name="bubble_notif">Anticipate Quick-Switch Bubbles</string>
+    <string name="bubble_notif">Anticipate QuickSwitch Bubbles</string>
     <string name="bubble_notif_desc">Touch to end service</string>
     <string name="minimize_to_bubble">Minimize to QuickSwitch Bubble</string>
 </resources>
